--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "test": "cypress open"
+    "test": "cypress open",
+    "tsc": "tsc",
+    "load": "tsc && open ./index.html"
   },
   "repository": {
     "type": "git",
