--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cypress": "^4.1.0"
   },
   "devDependencies": {
+    "@webcomponents/webcomponentsjs": "^2.4.2",
     "typescript": "^3.8.3"
   },
   "scripts": {
